--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE HTLM>
-<html>
+<html lang="en" dir="ltr">
   <head>
     <title>
       Cool Website
     </title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="stylesheet.css">
+
+
   </head>
   <body>
     <h1>
       Welcome to the internet
     </h1>
       <p>
-        This is Noe's cool Website
+        This is Noe's cool Website. Come waste your time <a href="https://www.youtube.com/"> here</a>
       </p>
     <h2>
       Answer to reading question for week 2
@@ -32,9 +36,8 @@
       The only problem I am unsure of is that I doubt that we can just make a backbone for the internet by ourself which would mean that we may need to still pay to the south to get connected to the rest of the world
 
     </p>
-
-
-      <img src="https://cdn.discordapp.com/emojis/588639047606599680.png?v=1" alt="picture">
+    <!-- image of djeeta -->
+      <img src="https://cdn.discordapp.com/emojis/588639047606599680.png?v=1" alt="picture" >
 
   </body>
 </html>
