--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
       The only problem I am unsure of is that I doubt that we can just make a backbone for the internet by ourself which would mean that we may need to still pay to the south to get connected to the rest of the world
 
     </p>
+
+    <h2>
+      Answer to reading question for week 4
+    </h2>
+      <p>
+      class three - week 4 response <br>
+      I think that the net artist was not necessarily trying to make art, they were trying to first make the web their playground. They were personalizing and exploring the tools that were now the web.
+      I think that what is a success as an artist is to be able to express what you want and do things you have passion about and being noticed for it. I don't think I know enough about the artists of the readings to define which are successful, I think that since they were mention in an article and are seen as "known" net artists, it counts. I don't know any net art, but I did enjoy Tetrageddonon.
     <!-- image of djeeta -->
       <img src="https://cdn.discordapp.com/emojis/588639047606599680.png?v=1" alt="picture" >
 
