--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     </title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="stylesheet.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ephesis&display=swap" rel="stylesheet">
 
   </head>
   <body>
@@ -14,12 +16,12 @@
       Welcome to the internet
     </h1>
       <p>
-        This is Noe's cool Website. Come waste your time <a href="https://www.youtube.com/"> here</a>
+        <strong>This is Noe's cool Website.</strong> <em>Come waste your time <a href="https://www.youtube.com/"> here</a></em>
       </p>
     <h2>
       Answer to reading question for week 2
     </h2>
-      <p>
+      <p class="specialparagraph">
         class one - week 2 response <br>
         There are many things I would like to change such as who develops the internet, where it is centralized and the privatization. Unfortunately, there is a lot that would almost make me change the entire era. I would have to try and assemble a team of different multicultural people women and men. I would want to decentralize the backbone of the internet. The quickest way would be to just be the first one to propose my project and take the control of the computer and internet first. I should also promote the open-source and free content of the internet. So probably go find Bill Gates and teach him about not privatizing things.
         The funding part would be quite difficult. since as much as I would like to not have to make a deal with the military or the government. I would either need to cheat at the lottery a little or try to find someone that would give me all the of the funding I need, most likely finding someone with the same values but if that doesn't work I guess blackmailing is always an option.
@@ -45,7 +47,7 @@
       I think that the net artist was not necessarily trying to make art, they were trying to first make the web their playground. They were personalizing and exploring the tools that were now the web.
       I think that what is a success as an artist is to be able to express what you want and do things you have passion about and being noticed for it. I don't think I know enough about the artists of the readings to define which are successful, I think that since they were mention in an article and are seen as "known" net artists, it counts. I don't know any net art, but I did enjoy Tetrageddonon.
     <!-- image of djeeta -->
-      <img src="https://cdn.discordapp.com/emojis/588639047606599680.png?v=1" alt="picture" >
+      <img src="Djeeta.png" alt="picture" >
 
   </body>
 </html>
