--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@
       class three - week 4 response <br>
       I think that the net artist was not necessarily trying to make art, they were trying to first make the web their playground. They were personalizing and exploring the tools that were now the web.
       I think that what is a success as an artist is to be able to express what you want and do things you have passion about and being noticed for it. I don't think I know enough about the artists of the readings to define which are successful, I think that since they were mention in an article and are seen as "known" net artists, it counts. I don't know any net art, but I did enjoy Tetrageddonon.
+      </p>
+
+    <h2>
+      Answer to reading question for week 5
+    </h2>
+      <p>
+        class three - week 5 response <br>
+      I don't want to restrict the student out of the GNU. So I would invest in the computer lab and having top technology point computer. Then I would make membership to use the computer labs. it wouldn't be that expensive but still good enough to get a profit out of it, still not more expensive than a computer itself. The labs could also be open to the public but with a higher prices membership. The student once they graduate can also still have a discounted price a little higher than a current student but still accessible. I would also invest in promoting the lab and the alumni and the work being done by the student. I would also try to invite for conference people that are still publishing in GNU but are still successful.
+    </p>
+
     <!-- image of djeeta -->
       <img src="Djeeta.png" alt="picture" >
 
