preping for SHEESH

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       Welcome to the internet
     </h1>
       <p>
-        <strong>This is Noe's cool Website.</strong> <em>Come waste your time <a href="https://www.youtube.com/"> here</a></em>
+        <strong>This is Noe's cool Website.</strong> <em>Come waste your time <a href="https://www.youtube.com/"> here</a></em>.
+        special thing i'm working on <a href="sheesh.html">here </a>
       </p>
     <h2>
       Answer to reading question for week 2
@@ -57,7 +58,7 @@
     </p>
 
     <!-- image of djeeta -->
-      <img src="Djeeta.png" alt="picture" >
+      <img src="assets/image/Djeeta.png" alt="picture" >
 
   </body>
 </html>
