getting started with the bare html of Freak it

--- a/sheesh.html
+++ b/sheesh.html
@@ -6,12 +6,32 @@
     </title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="stylesheet.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ephesis&display=swap" rel="stylesheet">
 
   </head>
   <body>
-UWU
+<h1 class="Freak it">
+Freak it
+</h1>
+<p class="local counter">
+<var> insert number that will change here </var>
+</p>
+<input id="hidden" type="text" placeholder="sounds" data-lpignore= "true">
+<button id="Sheesh" type="button" onclick="sheeshSound();"> Sheesh!</button>
+<div class="links">
+  <a href="https://www.youtube.com/channel/UCIeSUTOTkF9Hs7q3SGcO-Ow"> Elira Channel </a>
+  <a href="https://www.youtube.com/channel/UC4WvIIAo89_AzGUh1AZ6Dkg"> Rosemi Channel </a>
+<button id="About" type="button" onclick="toggleAbout();"> i </buton>
+
+
   </body>
+
+
+
+
+  <!-- <script>
+function sheeshSound(){
+playSheesh()
+} -->
+
+  </script>
 </html>
