--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <h2>
       Answer to reading question for week 3
     </h2>
-      <p>
+      <p class="specialparagraph">
       class two - week 3 response <br>
       Well, it sounds like the infrastructure is already mostly installed. So I would use the already existing infrastructure but instead of connecting to the South, I would put in place an equivalent for the services but own by companies of our country. I would give funding to the companies that can offer the major online service but with the exchange that they become a state company. (Hydro-Quebec) By doing so there could be less risk of another country's ISP to just come in like previously. The is also no need to have only one company for all the online services, there can be many for the different needs. The fact that it will also become a state company would ideally make it that it becomes a basic service just like electricity, water, etc. To encourage the companies I would also restrict the use of the online service to only be through the local's ones for some time to allow the population to become accustomed to the new platforms. if the infrastructure is not installed then I would probably have to commission it and make a state company for the internet from the ground up, but I would try to form people to be able to join the company when they are adults. So maybe also give scholarships or things to encourage that route.
       The only problem I am unsure of is that I doubt that we can just make a backbone for the internet by ourself which would mean that we may need to still pay to the south to get connected to the rest of the world
@@ -43,7 +43,7 @@
     <h2>
       Answer to reading question for week 4
     </h2>
-      <p>
+      <p class="specialparagraph">
       class three - week 4 response <br>
       I think that the net artist was not necessarily trying to make art, they were trying to first make the web their playground. They were personalizing and exploring the tools that were now the web.
       I think that what is a success as an artist is to be able to express what you want and do things you have passion about and being noticed for it. I don't think I know enough about the artists of the readings to define which are successful, I think that since they were mention in an article and are seen as "known" net artists, it counts. I don't know any net art, but I did enjoy Tetrageddonon.
@@ -52,7 +52,7 @@
     <h2>
       Answer to reading question for week 5
     </h2>
-      <p>
+      <p class="specialparagraph">
         class three - week 5 response <br>
       I don't want to restrict the student out of the GNU. So I would invest in the computer lab and having top technology point computer. Then I would make membership to use the computer labs. it wouldn't be that expensive but still good enough to get a profit out of it, still not more expensive than a computer itself. The labs could also be open to the public but with a higher prices membership. The student once they graduate can also still have a discounted price a little higher than a current student but still accessible. I would also invest in promoting the lab and the alumni and the work being done by the student. I would also try to invite for conference people that are still publishing in GNU but are still successful.
     </p>
