--- a/sheesh.html
+++ b/sheesh.html
@@ -20,7 +20,7 @@ Freak it
 <div class="links">
   <a href="https://www.youtube.com/channel/UCIeSUTOTkF9Hs7q3SGcO-Ow"> Elira Channel </a>
   <a href="https://www.youtube.com/channel/UC4WvIIAo89_AzGUh1AZ6Dkg"> Rosemi Channel </a>
-<button id="About" type="button" onclick="toggleAbout();"> i </buton>
+<button id="About" type="button" onclick="toggleAbout();"> <a href="https://impomu.com/"> i </a> </buton>
 
 
   </body>
