--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       Cool Website
     </title>
     <meta charset="utf-8">
+    <script src="script.js"> </script>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -55,6 +56,15 @@
       <p class="specialparagraph">
         class three - week 5 response <br>
       I don't want to restrict the student out of the GNU. So I would invest in the computer lab and having top technology point computer. Then I would make membership to use the computer labs. it wouldn't be that expensive but still good enough to get a profit out of it, still not more expensive than a computer itself. The labs could also be open to the public but with a higher prices membership. The student once they graduate can also still have a discounted price a little higher than a current student but still accessible. I would also invest in promoting the lab and the alumni and the work being done by the student. I would also try to invite for conference people that are still publishing in GNU but are still successful.
+    </p>
+
+    <h2>
+      Answer to reading question for week 6
+    </h2>
+      <p class="specialparagraph">
+        class three - week 6 response <br>
+I would ask about the salary of the other women in the company just to make sure the information is not outdated. I would try to then talk about it with other people men too. Without explicitly saying that I know the difference, I would try to let people onto the difference in salary between women and men. I would then talk to some people that share my values and present them the proof of the document. I would then try and go talk to the boss about equal salaries. If it doesn't work, we get a syndicate and then we go on strike. The problem is, if people decide to just change company then, the problem is not being fixed but just abandoned. I don't think the boss would like this very much but there's no reason to not have an equal salary. If I am fired though I might have a hard time later finding jobs, I'll still stand my value.
+
     </p>
 
     <!-- image of djeeta -->
