--- a/index.html
+++ b/index.html
@@ -13,12 +13,20 @@
 
   </head>
   <body>
-    <h1>
+    <h1 id="dynamicTitle">
       Welcome to the internet
     </h1>
+
       <p>
         <strong>This is Noe's cool Website.</strong> <em>Come waste your time <a href="https://www.youtube.com/"> here</a></em>.
         special thing i'm working on <a href="sheesh.html">here </a>
+        <br>
+
+        <div class="mydiv" onclick="myFunction()">
+        test
+      </div>
+
+      </br>
       </p>
     <h2>
       Answer to reading question for week 2
@@ -67,8 +75,18 @@ I would ask about the salary of the other women in the company just to make sure
 
     </p>
 
+    <h2>
+      Answer to reading question for week 7
+    </h2>
+      <p class="specialparagraph">
+        class three - week 7 response <br>
+I would have to be very careful. First, research the company and look into the data. I would make some correlation with investment, sponsor and research lab. I would try and gather evidence that if perhaps they had the vaccine it would benefit them to keep it private. I would also try and get informed on how it works legally. If I am not in danger of breaking the law too much. I would reveal it anonymously on big sites like Reddit or other forums and would provide some evidence. I would talk to the scientists, tell them that I could help try to spread the message on the internet. I don't think I could be a big contributor to advocate the message but I would help how I can.
+
+    </p>
     <!-- image of djeeta -->
-      <img src="assets/image/Djeeta.png" alt="picture" >
+
+      <img src="assets/image/Djeeta.png" id="dynamicPicture" onclick="myFunction()"  alt="picture" >
+    
 
   </body>
 </html>
