--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         special thing i'm working on <a href="sheesh.html">here </a>
         <br>
 
-        <div class="mydiv" onclick="myFunction()">
+        <div class="mydiv" onclick="myFunction()" id="dynamicBox">
         test
       </div>
 
@@ -86,7 +86,7 @@ I would have to be very careful. First, research the company and look into the d
     <!-- image of djeeta -->
 
       <img src="assets/image/Djeeta.png" id="dynamicPicture" onclick="myFunction()"  alt="picture" >
-    
+
 
   </body>
 </html>
