--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       Answer to reading question for week 5
     </h2>
       <p class="specialparagraph">
-        class three - week 5 response <br>
+        class four - week 5 response <br>
       I don't want to restrict the student out of the GNU. So I would invest in the computer lab and having top technology point computer. Then I would make membership to use the computer labs. it wouldn't be that expensive but still good enough to get a profit out of it, still not more expensive than a computer itself. The labs could also be open to the public but with a higher prices membership. The student once they graduate can also still have a discounted price a little higher than a current student but still accessible. I would also invest in promoting the lab and the alumni and the work being done by the student. I would also try to invite for conference people that are still publishing in GNU but are still successful.
     </p>
 
@@ -70,7 +70,7 @@
       Answer to reading question for week 6
     </h2>
       <p class="specialparagraph">
-        class three - week 6 response <br>
+        class five - week 6 response <br>
 I would ask about the salary of the other women in the company just to make sure the information is not outdated. I would try to then talk about it with other people men too. Without explicitly saying that I know the difference, I would try to let people onto the difference in salary between women and men. I would then talk to some people that share my values and present them the proof of the document. I would then try and go talk to the boss about equal salaries. If it doesn't work, we get a syndicate and then we go on strike. The problem is, if people decide to just change company then, the problem is not being fixed but just abandoned. I don't think the boss would like this very much but there's no reason to not have an equal salary. If I am fired though I might have a hard time later finding jobs, I'll still stand my value.
 
     </p>
@@ -79,9 +79,16 @@ I would ask about the salary of the other women in the company just to make sure
       Answer to reading question for week 7
     </h2>
       <p class="specialparagraph">
-        class three - week 7 response <br>
+        class six - week 7 response <br>
 I would have to be very careful. First, research the company and look into the data. I would make some correlation with investment, sponsor and research lab. I would try and gather evidence that if perhaps they had the vaccine it would benefit them to keep it private. I would also try and get informed on how it works legally. If I am not in danger of breaking the law too much. I would reveal it anonymously on big sites like Reddit or other forums and would provide some evidence. I would talk to the scientists, tell them that I could help try to spread the message on the internet. I don't think I could be a big contributor to advocate the message but I would help how I can.
 
+    </p>
+
+    <h2>
+      Final Website Proposal
+    </h2>
+      <p class="specialparagraph">
+    Final Website Proposal <a href="proposal.html">here </a>
     </p>
     <!-- image of djeeta -->
 
