--- a/proposal.html
+++ b/proposal.html
@@ -28,7 +28,8 @@ Final Website proposal
   The fourth page will be the about page. There will be a short text about the company and its goal. At the bottom, there will be a link to the application page.
 <br>
   The last page will be the apply page. The page will have a list of choices of the branches to customize your application to apply.
-
+<br>
+In conclusion, this is what the fake company website will have as a design. There will be many pages that will serve different functions and do different actions. The simple but clear design will be able to give a professional look, a pleasing look and easy to navigate look to the website.
 </p>
 
 <p class="specialparagraph">
