--- a/index.html
+++ b/index.html
@@ -90,6 +90,15 @@ I would have to be very careful. First, research the company and look into the d
       <p class="specialparagraph">
     Final Website Proposal <a href="proposal.html">here </a>
     </p>
+
+    <h2>
+      Answer to reading question for week 8
+    </h2>
+      <p class="specialparagraph">
+        class seven - week 8 response <br>
+I would decline the offer. Unless it was brought up, I would not feel the need to address it. I would explain that I don't voice my opinion to be popular. I do not mind the sponsor idea itself, it can be very useful for smaller companies or start-ups. But even in a sponsored deal, I would say my honest opinion of it and would very explicitly tell about the sponsor and why it is there. A big corporation like Pepsi or a company that has no relation or is not relevant to the topic, in my opinion, has no place there. I believe that the internet should be a free space to debate, exchange and voice opinions without the need for promotional ads or big corporations to stuff their nose into it.
+    </p>
+    
     <!-- image of djeeta -->
 
       <img src="assets/image/Djeeta.png" id="dynamicPicture" onclick="myFunction()"  alt="picture" >
