all skeleton done

--- a/ninisani/worker/workers.html
+++ b/ninisani/worker/workers.html
@@ -5,7 +5,7 @@
     work
     </title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="ninisani/worker/stylesheetworker.css">
+    <link rel="stylesheet" href="./stylesheetworker.css">
 
   </head>
 
@@ -20,20 +20,20 @@
         <li>About</li>
       </ul>
     </div>
-    <div class="lazulight">
+    <div class="gen">
       Lazulight
 
     </div>
 
     <!-- insert carousel here -->
 
-    <div class="obsydia">
+    <div class="gen">
     Obsydia
 
     </div>
 
     <!-- insert carousel here -->
-    <div class="ethyria">
+    <div class="gen">
     Ethyria
 
     </div>
